# storage/api-docs/api-docs.json
@@ -101,6 +101,47 @@
                 ]
             }
         },
+        "/api/contracts/generate-conditions/{id}": {
+            "post": {
+                "tags": [
+                    "Contracts"
+                ],
+                "summary": "Create a new product",
+                "operationId": "c15147049f15aa56b851dbbaeef05736",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id",
+                        "required": true,
+                        "example": ""
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
         "/api/contracts/accept/{id}": {
             "post": {
                 "tags": [
